[workspace]

members = [
    "crates/noir_halo2_backend_axiom",
    "crates/noir_halo2_backend_common",
    "crates/noir_halo2_backend_pse",
    "crates/noir_halo2_backend_zcash",
]
default-members = ["crates/noir_halo2_backend_pse"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
acvm = "0.15.0"
bincode = "1.3.3"
bytesize = "1.2"
rand = "0.8"
reqwest = { version = "0.11.16", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
tokio = "1.0"
futures-util = "0.3.14"
thiserror = "1.0.21"
noir_halo2_backend_common = { path = "crates/noir_halo2_backend_common" }
