[workspace]

members = [
    "crates/noir_halo2_backend_axiom",
    "crates/noir_halo2_backend_common",
    "crates/noir_halo2_backend_pse",
    "crates/noir_halo2_backend_zcash",
]
default-members = ["crates/noir_halo2_backend_pse"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
acvm = "0.15.0"
rand = "0.8"
# reqwest = { package = "reqwest_wasi", version = "0.11.15", default-features = false, features = [
#     "stream",
#     "rustls-tls",
# ] }
# reqwest = { version = "0.11.16", default-features = false, features = [
#     "stream",
#     "rustls-tls",
# ] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
noir_halo2_backend_common = { path = "crates/noir_halo2_backend_common" }

# wasm
# console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
# getrandom = { version = "0.2" }

serde-wasm-bindgen = "0.5.0"
tokio = { version = "1.28.1", features = ["rt"] }
# tokio = { package = "tokio_wasi", version = "1.25.2", features = ["rt"] }