[package]
name = "noir_halo2_backend_axiom"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acvm.workspace = true
noir_halo2_backend_common.workspace = true
rand.workspace = true
serde_json.workspace = true

# axiom
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0" }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0" }
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.1" }
# zkevm-keccak = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_compilation"
harness = false

[[bench]]
name = "bench_noir_halo2_axiom_prove"
harness = false

[[bench]]
name = "bench_noir_halo2_axiom_verify"
harness = false

# wasm not supported because halo2-base uses jemallocator
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook.workspace = true
getrandom.workspace = true
serde-wasm-bindgen.workspace = true
tokio.workspace = true
wasm-bindgen.workspace = true
