[package]
name = "noir_halo2_backend_axiom"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axiom
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0" }
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.1" }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0" }
# zkevm-keccak = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0" }

noir_halo2_backend_common.workspace = true
acvm.workspace = true
serde_json.workspace = true
rand.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_noir_halo2_axiom_prove"
harness = false

[[bench]]
name = "bench_noir_halo2_axiom_verify"
harness = false
