[package]
name = "noir_halo2_backend_common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm.workspace = true
bincode = "1.3.3"
bytesize = "1.2"
reqwest = { version = "0.11.16", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
serde_json.workspace = true
thiserror = "1.0.21"
