[package]
name = "noir_halo2_backend_common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm.workspace = true
bincode = "1.3.3"
bytesize = "1.2"
reqwest = { version = "0.11.16", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
serde_json.workspace = true
thiserror = "1.0.21"

# can only build on linux because the use of a c lib
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.5.0"
tokio = { version = "1.28.1", features = ["rt"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }

