[package]
name = "noir_halo2_backend_zcash"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm.workspace = true
noir_halo2_backend_common.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

# zcash
zcash_halo2_proofs = { package = "halo2_proofs", version = "0.3.0" }
